# xchangelib

./: pyproject.toml
src/xchange_lib/: example_bot.py  service_pb2_grpc.py  xchange_client.py
src/xchange_lib/docs/source/: conf.py
src/xchangelib/: service_pb2_grpc.py  xchange_client.py
src/xchangelib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/xchangelib/docs/: requirements.txt
src/xchangelib/docs/source/: usage.rst
src/xchangelib/examples/: example_bot.py
